--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <title>Items</title>
@@ -10,7 +8,7 @@
 
     <body>
         <div th:each="item: ${items}">
-            <p th:utext="${item.getName()}"></p>
+            <a th:utext="${tag.getName()}"></a>
         </div>
     </body>
 
