Добавлено редактирование ctg и task. Не работает

--- a/src/main/resources/templates/redactCategory.html
+++ b/src/main/resources/templates/redactCategory.html
@@ -3,13 +3,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Tasks</title>
+    <link rel = "stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-<form action="#" th:action="@{/addTask}" th:object="${addTask}" method="post">
-    <p>Заголовок: <input type="text" th:field="*{title}" /></p>
-    <p>Текст: <textarea type="text" th:field="*{description}"></textarea></p>
-    <p>Parent ID: <input type="hidden" th:field="*{parentId}"></p>
+<form action="#" th:action="@{/redactCategory}" th:object="${redactCategory}" method="post">
+    <p>Название: <input type="text" th:field="*{name}" /></p>
+    <p>ID: <input type="hidden" th:field="*{id}"></p>
     <p><input type="submit" value="Добавить" /> </p>
 </form>
 </body>
