--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -59,13 +59,34 @@
                 <div class="col-8">
                     <div class="container-fluid">
                         <div class="row justify-content-center mt-5">
-                            <div th:switch="${currentCategory.id}">
-                                <p th:case="null"></p>
-                                <button th:case="*" type="button" class="btn btn-primary" data-toggle="modal"
-                                        data-target="#redactModal">
-                                    Редактировать категорию
-                                </button>
+                            <div class="container-fluid">
+                                <th:block th:switch="${currentCategory.id}">
+                                    <h3><p th:case="null"> Все карточки</p></h3>
+                                    <h3><p th:case="*" th:utext="${currentCategory.getName()}"></p></h3>
+                                </th:block>
+                                <div class="<justify-content-between">
+                                    <!--Кнопка добавления задачи-->
+                                    <div th:switch="${currentCategory.id}">
+                                        <p th:case="null"></p>
+                                        <button th:case="*" type="button" class="btn btn-primary m-3"
+                                                data-toggle="modal"
+                                                data-target="#newTaskModal">
+                                            Добавить задачу
+                                        </button>
+                                    </div>
+                                    <!--Кнопка редактирования категории-->
+                                    <div th:switch="${currentCategory.id}">
+                                        <p th:case="null"></p>
+                                        <button th:case="*" type="button" class="btn btn-primary m-3"
+                                                data-toggle="modal"
+                                                data-target="#redactModal">
+                                            Редактировать категорию
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
+
+
                             <!--Модальное окно изменения категории-->
                             <div class="modal fade" id="redactModal" tabindex="-1" role="dialog"
                                  aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -90,14 +111,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-
-                            <div th:switch="${currentCategory.id}">
-                                <p th:case="null"></p>
-                                <button th:case="*" type="button" class="btn btn-primary" data-toggle="modal"
-                                        data-target="#newTaskModal">
-                                    Добавить задачу
-                                </button>
                             </div>
                             <!--Модальное окно добавления задачи-->
                             <div class="modal fade" id="newTaskModal" tabindex="-1" role="dialog"
@@ -145,63 +158,67 @@
                                 <div class="container-fluid m-2" style="width:12rem">
                                     <!--Карточка задачи-->
                                     <div class="card">
-                                        <div class="card-header">
+                                        <div class="card-header p-3">
                                             <h5><a th:href="@{/category/}"
                                                    th:utext="${task.getTitle()}"></a></h5>
                                         </div>
-                                        <div class="card-body">
+                                        <div class="card-body p-3">
                                             <a th:href="@{/category/}"
                                                th:utext="${task.getDescription()}"></a>
                                         </div>
-                                        <div class="card-footer">
+                                        <div class="card-footer p-3">
                                             <form th:action="@{/deleteTask}" method="post" class="input-group mb-3">
                                                 <input type="hidden" name="id" th:value="${task.getId()}">
                                                 <input type="hidden" name="parentId" th:value="${currentCategory.id}">
+                                                <!--Кнопка редактирования задачи-->
                                                 <th:block th:switch="${currentCategory.id}">
                                                     <div th:case="null"></div>
-                                                    <button th:case="*" type="button" class="btn btn-primary btn-sm" data-toggle="modal"
-                                                            data-target="#redactTask">
-                                                        Change
+                                                    <button th:case="*" type="button" class="btn btn-primary btn-sm"
+                                                            data-toggle="modal"
+                                                            th:data-target="'#'+'redactTask'+${task.getId()}">
+                                                        Изменить
                                                     </button>
                                                 </th:block>
-                                                <input type="submit" class="btn btn-outline-danger btn-sm" value="x"/>
+                                                <input type="submit" class="btn btn-danger btn-sm" value=" X "/>
                                             </form>
-                                        </div>
-                                    </div>
-                                    <!--Модальное окно редактирования задачи-->
-                                    <div class="modal fade" id="redactTask" tabindex="-1" role="dialog"
-                                         aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title">Редактирование задачи</h5>
-                                                    <button type="button" class="close" data-dismiss="modal"
-                                                            aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <form action="#" th:action="@{/redactTask}" method="post"
-                                                          class="input-group mt-3">
-                                                        <div class="form-group">
-                                                            <input type="text" class="form-control"
-                                                                   placeholder="Новое название заметки" name="title"/>
+                                            <!--Модальное окно редактирования задачи-->
+                                            <div class="modal fade" th:id="'redactTask'+${task.getId()}" tabindex="-1" role="dialog"
+                                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title">Редактирование задачи</h5>
+                                                            <button type="button" class="close" data-dismiss="modal"
+                                                                    aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
                                                         </div>
-                                                        <div class="form-group">
-                                                            <textarea class="form-control" rows="3" name="description">
-                                                        </textarea>
+                                                        <div class="modal-body">
+                                                            <form action="#" th:action="@{/redactTask}" method="post"
+                                                                  class="input-group mt-3">
+                                                                <div class="form-group">
+                                                                    <input type="text" class="form-control"
+                                                                           th:value="${task.getTitle()}" name="title"/>
+                                                                </div>
+                                                                <div class="form-group">
+                                                                    <textarea class="form-control"
+                                                                              th:value="${task.getDescription()}"
+                                                                              rows="3" name="description"></textarea>
+                                                                </div>
+                                                                <input type="hidden" name="id"
+                                                                       th:value="${task.getId()}">
+                                                                <input type="hidden" name="parentId"
+                                                                       th:value="${currentCategory.id}">
+                                                                <br>
+                                                                <input type="submit" class="btn btn-outline-secondary"
+                                                                       value="Принять"/>
+                                                            </form>
                                                         </div>
-                                                        <input type="hidden" name="id" th:value="${task.getId()}">
-                                                        <input type="hidden" name="parentId"
-                                                               th:value="${currentCategory.id}">
-                                                        <br>
-                                                        <input type="submit" class="btn btn-outline-secondary"
-                                                               value="Принять"/>
-                                                    </form>
+                                                    </div>
                                                 </div>
                                             </div>
+                                            <!--     -->
                                         </div>
-
                                     </div>
                                 </div>
                             </th:block>
