--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -59,33 +59,21 @@
                 <div class="col-8">
                     <div class="container-fluid">
                         <div class="row justify-content-center mt-5">
-                            <div class="container-fluid">
+                            <div class="container-fluid justify-content-beetween">
                                 <th:block th:switch="${currentCategory.id}">
-                                    <h3><p th:case="null"> Все карточки</p></h3>
-                                    <h3><p th:case="*" th:utext="${currentCategory.getName()}"></p></h3>
-                                </th:block>
-                                <div class="<justify-content-between">
-                                    <!--Кнопка добавления задачи-->
-                                    <div th:switch="${currentCategory.id}">
-                                        <p th:case="null"></p>
-                                        <button th:case="*" type="button" class="btn btn-primary m-3"
-                                                data-toggle="modal"
-                                                data-target="#newTaskModal">
-                                            Добавить задачу
-                                        </button>
+                                    <div th:case="null">
+                                        <span><h3>Все карточки</h3></span>
                                     </div>
-                                    <!--Кнопка редактирования категории-->
-                                    <div th:switch="${currentCategory.id}">
-                                        <p th:case="null"></p>
-                                        <button th:case="*" type="button" class="btn btn-primary m-3"
+                                    <div th:case="*" class="justify-content-between">
+                                        <h3><p th:utext="${currentCategory.getName()}"></h3>
+                                        <button type="button" class="btn btn-primary m-3"
                                                 data-toggle="modal"
                                                 data-target="#redactModal">
                                             Редактировать категорию
                                         </button>
                                     </div>
-                                </div>
+                                </th:block>
                             </div>
-
 
                             <!--Модальное окно изменения категории-->
                             <div class="modal fade" id="redactModal" tabindex="-1" role="dialog"
@@ -112,59 +100,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--Модальное окно добавления задачи-->
-                            <div class="modal fade" id="newTaskModal" tabindex="-1" role="dialog"
-                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Добавление задачи</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div th:switch="${currentCategory.id}">
-                                                <p th:case="null"></p>
-                                                <form th:case="*" th:action="@{/addTask}" method="post"
-                                                      class="input-group mb-3">
-                                                    <div class="form-group">
-                                                        <label for="newTitleForm">Название заметки</label>
-                                                        <input type="text" class="form-control" id="newTitleForm"
-                                                               aria-label="Новый заголовок" name="title"/>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <label for="newDescriptionForm">Текст заметки</label>
-                                                        <textarea class="form-control" id="newDescriptionForm" rows="3"
-                                                                  name="description">
-                                                        </textarea>
-                                                    </div>
-                                                    <br>
-                                                    <div class="form-group">
-                                                        <input type="hidden" name="parentId"
-                                                               th:value="${currentCategory.id}">
-                                                        <input type="submit" class="btn btn-outline-secondary"
-                                                               value="Принять"/>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                         <div class="row">
                             <th:block th:each="task: ${tasks}">
-                                <div class="container-fluid m-2" style="width:12rem">
+                                <div class="container-fluid m-2">
                                     <!--Карточка задачи-->
                                     <div class="card">
                                         <div class="card-header p-3">
-                                            <h5><a th:href="@{/category/}"
-                                                   th:utext="${task.getTitle()}"></a></h5>
+                                            <h5><p th:utext="${task.getTitle()}"></p></h5>
                                         </div>
                                         <div class="card-body p-3">
-                                            <a th:href="@{/category/}"
-                                               th:utext="${task.getDescription()}"></a>
+                                            <p th:utext="${task.getDescription()}"></p>
                                         </div>
                                         <div class="card-footer p-3">
                                             <form th:action="@{/deleteTask}" method="post" class="input-group mb-3">
@@ -182,7 +128,9 @@
                                                 <input type="submit" class="btn btn-danger btn-sm" value=" X "/>
                                             </form>
                                             <!--Модальное окно редактирования задачи-->
-                                            <div class="modal fade" th:id="'redactTask'+${task.getId()}" tabindex="-1" role="dialog"
+                                            <div class="modal fade p-0" th:id="'redactTask'+${task.getId()}"
+                                                 tabindex="-1"
+                                                 role="dialog"
                                                  aria-labelledby="exampleModalLabel" aria-hidden="true">
                                                 <div class="modal-dialog">
                                                     <div class="modal-content">
@@ -193,25 +141,27 @@
                                                                 <span aria-hidden="true">&times;</span>
                                                             </button>
                                                         </div>
-                                                        <div class="modal-body">
+                                                        <div class="modal-body p-0">
                                                             <form action="#" th:action="@{/redactTask}" method="post"
-                                                                  class="input-group mt-3">
-                                                                <div class="form-group">
+                                                                  class="input-group m-0 card">
+                                                                <div class="form-group card-header">
                                                                     <input type="text" class="form-control"
                                                                            th:value="${task.getTitle()}" name="title"/>
                                                                 </div>
-                                                                <div class="form-group">
-                                                                    <textarea class="form-control"
+                                                                <div class="form-group card-body">
+                                                                    <textarea class="form-control" id="descAtChanging"
                                                                               th:value="${task.getDescription()}"
                                                                               rows="3" name="description"></textarea>
                                                                 </div>
-                                                                <input type="hidden" name="id"
-                                                                       th:value="${task.getId()}">
-                                                                <input type="hidden" name="parentId"
-                                                                       th:value="${currentCategory.id}">
-                                                                <br>
-                                                                <input type="submit" class="btn btn-outline-secondary"
-                                                                       value="Принять"/>
+                                                                <div class="form-group card-footer">
+                                                                    <input type="hidden" name="id"
+                                                                           th:value="${task.getId()}">
+                                                                    <input type="hidden" name="parentId"
+                                                                           th:value="${currentCategory.id}">
+                                                                    <br>
+                                                                    <input type="submit" class="btn btn-primary"
+                                                                           value="Принять"/>
+                                                                </div>
                                                             </form>
                                                         </div>
                                                     </div>
@@ -222,7 +172,52 @@
                                     </div>
                                 </div>
                             </th:block>
+                            <div class="container-fluid m-2">
+                                <!--Блок, который хочу скрыть-->
+                                <div th:switch="${currentCategory.id}" id="addNewTask" style="display:none">
+                                    <p th:case="null"></p>
+                                    <form th:case="*" th:action="@{/addTask}" method="post" id="newTaskForm"
+                                          class="input-group mb-3 card">
+                                        <div class="form-group card-header">
+                                            <!--<label for="newTitleForm">Название заметки</label>-->
+                                            <input type="text" class="form-control" placeholder="Название"
+                                                   id="newTitleForm"
+                                                   aria-label="Новый заголовок" name="title"/>
+                                        </div>
+                                        <div class="form-group card-body">
+                                            <!--<label for="newDescriptionForm">Текст заметки</label>-->
+                                            <textarea class="form-control" id="newDescriptionForm" rows="3"
+                                                      name="description" maxlength="1000">
+                                                        </textarea>
+                                        </div>
+                                        <br>
+                                        <div class="form-group card-footer">
+                                            <input type="hidden" name="parentId"
+                                                   th:value="${currentCategory.id}">
+                                            <input type="submit" class="btn btn-primary btn-sm"
+                                                   value="Создать"/>
+                                            <button class="btn btn-danger btn-sm" onclick="(document.getElementById('newTaskForm').reset());
+                                            (document.getElementById('addNewTask').style.display='none');">
+                                                X
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <!--   -->
+                            </div>
                         </div>
+                        <!--Кнопка добавления задачи-->
+                        <div th:switch="${currentCategory.id}">
+                            <p th:case="null"></p>
+                            <div th:case="*">
+                                <button type="button" class="btn btn-primary m-3" id="addTaskButton"
+                                        onclick="(document.getElementById('addNewTask').style.display='block');
+                                        (document.getElementById('addTaskButton').style.display='none')">
+                                    Добавить задачу
+                                </button>
+                            </div>
+                        </div>
+                        <!--   -->
                     </div>
                 </div>
             </div>
