--- a/src/main/resources/templates/redactTask.html
+++ b/src/main/resources/templates/redactTask.html
@@ -12,6 +12,7 @@
     <p>Текст: <textarea th:field="*{description}"></textarea></p>
     <p>ID: <input type="hidden" th:field="*{id}"></p>
     <p>ParentID: <input type="hidden" th:field="*{parentId}"></p>
+    <p>Create date: <input type="hidden" th:field="*{updateDate}"></p>
     <p><input type="submit" value="+" /> </p>
 </form>
 </body>
