--- a/src/main/resources/templates/addTask.html
+++ b/src/main/resources/templates/addTask.html
@@ -10,6 +10,7 @@
     <p>Заголовок: <input type="text" th:field="*{title}" /></p>
     <p>Текст: <textarea type="text" th:field="*{description}"></textarea></p>
     <p>Parent ID: <input type="hidden" th:field="*{parentId}"></p>
+    <p>Create date: <input type="hidden" th:field="*{createDate}"></p>
     <p><input type="submit" value="Добавить" /> </p>
 </form>
 </body>
